Atualização para gerar o JAR na pasta Deploy

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 #Configuration file
 project.dir=./
 #deploy.dir=/home/cajahyba/Projects/Java/workspace/MobiFX/lib
-deploy.dir=./
+deploy.dir=./deploy
 deploy.name=mobi
 jar.name=mobi-
 jar.version=0.0.5
